# RubiksCubeSolver

./: BfsSolver.h  CMakeLists.txt  DfsSolver.h  RubiksCube.cpp  RubiksCube.h  RubiksCube3dArray.cpp  main.cpp
Database/Corner/: CornerPatternDatabase.cpp  CornerPatternDatabase.h
Database/Indexer/: PermutationIndexer.h  math.h
Database/Nibble Array/: NibbleArray.cpp  NibbleArray.h
Database/Pattern/: PatternDatabase.cpp  PatternDatabase.h
Db Maker/: CornerDBMaker.cpp  CornerDBMaker.h
Model/: RubiksCube.cpp  RubiksCube.h
Model/Cubes/: RubiksCube3dArray.cpp  RubiksCubeBitsModel.cpp
Solver/: BfsSolver.h  DfsSolver.h  IDDFSSolver.h
Solver/ID Astar/: IDAStar.h
